# parsoy

./: .gitmodules  .rustfmt.toml  Cargo.toml  README.md
libs/parsoy-util/: Cargo.toml
parsoy-cli/: Cargo.toml
parsoy-cli/src/: cli.rs  lib.rs  main.rs  template.rs
parsoy-cli/src/cmd/: mod.rs  new.rs
parsoy-cli/template/common/: _Cargo.toml
parsoy-cli/template/compiler/: _Cargo.toml
parsoy-config/: Cargo.toml
parsoy-config/src/: lib.rs  project.rs
parsoy-config/src/project/: grammar.rs
parsoy-project/: Cargo.toml
parsoy-project/src/: lib.rs
parsoy-runtime/: Cargo.toml
parsoy-runtime/src/: lib.rs
parsoy-template/: Cargo.toml
parsoy-template/src/: error.rs  items.rs  lib.rs  macros.rs  template.rs
parsoy-util/: Cargo.toml
scripts/: clean.sh  fmt.sh
