[workspace]
resolver = "3"
members = ["parsoy-*"]
exclude = ["examples/mylang/*"]

[workspace.package]
edition = "2024"
authors = ["Parsoy Contributor"]
description = "A fast, modern parser and lexer generator built in Rust for robust language systems."
license = "MIT OR Apache-2.0"
repository = "https://github.com/parsoy-tool/parsoy"

[workspace.dependencies]
parsoy-runtime = { version = "*", path = "parsoy-runtime" }
parsoy-util = { version = "*", path = "parsoy-util" }
parsoy-config = { version = "*", path = "parsoy-config" }
parsoy-project = { version = "*", path = "parsoy-project" } 