[package]
name = "parsoy-cli"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "A generator and cli for parsoy"
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "parsoy"
path = "./src/lib.rs"

[[bin]]
name = "parsoy"
path = "./src/bin/main.rs"
required-features = ["cli"]

[dependencies]
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"], optional = true }
derive_more = { version = "*", features = ["full"] }

## Local
parsoy-template = { workspace = true }

[features]
default = ["cli"]
cli = ["clap"]
