[package]
name = "parsoy-template"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "System Template"
license = { workspace = true }
repository = { workspace = true }

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
walkdir = "2.5.0"